Merged main (Llama 3.2 and AOT)